--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,6 @@ img {
 .page-header__logo {
   height: 85px;
   text-align: center;
-  outline: 5px solid rgba(255, 0, 0, 0.8);
   outline-offset: -5px;
 }
 
@@ -168,6 +167,11 @@ img {
   min-height: 51px;
   background-color: #826550;
 }
+@media (min-width: 768px) {
+  .main-nav {
+    background-color: #000000;
+  }
+}
 
 .main-nav__toggle {
   position: absolute;
@@ -183,6 +187,11 @@ img {
 }
 .main-nav__toggle:hover, .main-nav__toggle:active {
   background-color: #624530;
+}
+@media (min-width: 768px) {
+  .main-nav__toggle {
+    display: none;
+  }
 }
 
 .main-nav--closed .main-nav__toggle::before {
@@ -319,9 +328,11 @@ img {
 .site-list {
   font-weight: bold;
 }
-
 @media (min-width: 768px) {
   .site-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     width: 570px;
   }
 }
@@ -330,6 +341,40 @@ img {
     width: 780px;
   }
 }
+
+@media (min-width: 768px) {
+  .site-list__item {
+    margin-right: 32px;
+  }
+  .site-list__item:last-child {
+    margin-right: 0;
+  }
+  .site-list__item--active {
+    position: relative;
+  }
+  .site-list__item--active::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    height: 3px;
+    background: #826550;
+  }
+}
+
+@media (min-width: 768px) {
+  .site-list__item a[href]:hover {
+    color: #826550;
+    background-color: #000000;
+  }
+  .site-list__item a[href]:active {
+    color: #ffffff;
+    background-color: #000000;
+    opacity: 0.3;
+  }
+}
+
 .site-list a {
   position: relative;
   display: block;
@@ -343,6 +388,15 @@ img {
   background-color: #826550;
   border-top: 1px solid #886e5b;
   border-bottom: 1px solid #71543f;
+}
+@media (min-width: 768px) {
+  .site-list a {
+    padding: 0;
+    padding-top: 25px;
+    padding-bottom: 23px;
+    background: none;
+    border: none;
+  }
 }
 
 @media (min-width: 768px) {
@@ -362,7 +416,6 @@ img {
 }
 
 .user-list__login-icon {
-  outline: 1px solid green;
   position: absolute;
   top: 17px;
   left: 21px;
