made a stats block

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -156,6 +156,26 @@ img {
   padding: 28px 20px;
   background-color: #ffffff;
   color: #000000;
+
+  @media (min-width: $tablet-width) {
+    position: relative;
+    padding-top: 32px;
+    padding-right: 34px;
+    padding-left: 32px;
+    padding-bottom: 30px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+
+    &::before {
+      position: absolute;
+      left: -23px;
+      top: 42px;
+      width: 23px;
+      height: 23px;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1 1'%3E%3Cpolygon points='0,0 1,0 1,1' fill='white'/%3E%3C/svg%3E");
+      content: "";
+    }
+  }
 }
 
 .stats__slogan {
@@ -166,6 +186,12 @@ img {
   line-height: 1;
   font-weight: bold;
   font-size: 30px;
+  @media (min-width: $tablet-width) {
+    margin-bottom: 17px;
+    text-align: left;
+    text-transform: none;
+    font-size: 40px;
+  }
 }
 
 .stats__intro {
@@ -178,6 +204,11 @@ img {
       display: none;
     }
   }
+  @media (min-width: $tablet-width) {
+    padding-top: 4px;
+    padding-left: 34px;
+    text-align: left;
+  }
 }
 
 .stats__legend {
@@ -188,12 +219,15 @@ img {
 }
 
 .stats__legend--top {
+  color: rgba(0, 0, 0, 0.3);
   @media (max-width: $mobile-width-only) {
     display: none;
   }
 }
 
 .stats__legend--bottom {
+  color: rgba(255, 255, 255
+  , 0.3);
   @media (min-width: $tablet-width) {
     display: none;
   }
@@ -201,6 +235,44 @@ img {
 
 .stats__list {
   margin: 0;
+  margin-bottom: 20px;
+  background-color: #353535;
+}
+
+.stats__item {
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.stats__item:nth-child(1) {
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+.stats__item:nth-child(2) {
+  background-color: rgba(255, 255, 255, 0.12);
+}
+.stats__item:nth-child(4) {
+  background-color: rgba(53, 53, 53, 0.12);
+}
+.stats__number {
+  line-height: 1;
+  font-weight: bold;
+  font-size: 40px;
+}
+
+sup {
+  position: static;
+  margin-left: 5px;
+  vertical-align: baseline;
+  font-size: inherit;
+}
+
+.stats__description {
+  margin: 0;
+  text-align: right;
+  line-height: 1;
+  font-size: 18px;
 }
 //@import("blocks/main-nav.scss");
 
