--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,26 @@ img {
   background-color: #ffffff;
   color: #000000;
 }
+@media (min-width: 768px) {
+  .stats__header {
+    position: relative;
+    padding-top: 32px;
+    padding-right: 34px;
+    padding-left: 32px;
+    padding-bottom: 30px;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+  .stats__header::before {
+    position: absolute;
+    left: -23px;
+    top: 42px;
+    width: 23px;
+    height: 23px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1 1'%3E%3Cpolygon points='0,0 1,0 1,1' fill='white'/%3E%3C/svg%3E");
+    content: "";
+  }
+}
 
 .stats__slogan {
   margin: 0;
@@ -128,6 +148,14 @@ img {
   line-height: 1;
   font-weight: bold;
   font-size: 30px;
+}
+@media (min-width: 768px) {
+  .stats__slogan {
+    margin-bottom: 17px;
+    text-align: left;
+    text-transform: none;
+    font-size: 40px;
+  }
 }
 
 .stats__intro {
@@ -141,6 +169,13 @@ img {
     display: none;
   }
 }
+@media (min-width: 768px) {
+  .stats__intro {
+    padding-top: 4px;
+    padding-left: 34px;
+    text-align: left;
+  }
+}
 
 .stats__legend {
   margin: 0;
@@ -149,12 +184,18 @@ img {
   line-height: 1;
 }
 
+.stats__legend--top {
+  color: rgba(0, 0, 0, 0.3);
+}
 @media (max-width: 767px) {
   .stats__legend--top {
     display: none;
   }
 }
 
+.stats__legend--bottom {
+  color: rgba(255, 255, 255, 0.3);
+}
 @media (min-width: 768px) {
   .stats__legend--bottom {
     display: none;
@@ -163,6 +204,46 @@ img {
 
 .stats__list {
   margin: 0;
+  margin-bottom: 20px;
+  background-color: #353535;
+}
+
+.stats__item {
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.stats__item:nth-child(1) {
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+.stats__item:nth-child(2) {
+  background-color: rgba(255, 255, 255, 0.12);
+}
+
+.stats__item:nth-child(4) {
+  background-color: rgba(53, 53, 53, 0.12);
+}
+
+.stats__number {
+  line-height: 1;
+  font-weight: bold;
+  font-size: 40px;
+}
+
+sup {
+  position: static;
+  margin-left: 5px;
+  vertical-align: baseline;
+  font-size: inherit;
+}
+
+.stats__description {
+  margin: 0;
+  text-align: right;
+  line-height: 1;
+  font-size: 18px;
 }
 
 .main-nav {
